Closed
Bug 931496
Opened 12 years ago
Closed 12 years ago
Assertion failure: script->canBaselineCompile(), at jit/BaselineJIT.cpp
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla28
| Tracking | Status | |
|---|---|---|
| firefox25 | --- | unaffected |
| firefox26 | --- | unaffected |
| firefox27 | --- | fixed |
| firefox28 | --- | fixed |
| firefox-esr17 | --- | unaffected |
| firefox-esr24 | --- | unaffected |
People
(Reporter: gkw, Assigned: bhackett1024)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: [jsbugmon:update][qa-])
Attachments
(3 files)
|
1.81 KB,
text/plain
|
Details | |
|
1.25 KB,
patch
|
jandem
:
review+
bajaj
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
691 bytes,
text/plain
|
Details |
function g() {
yield
}
g()
function f() {
g()
}
try {
new f
} catch (e) {}
asserts js debug shell on m-c changeset 6baab9dc96df with --baseline-eager at Assertion failure: script->canBaselineCompile(), at jit/BaselineJIT.cpp
Tested with:
https://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-central-macosx64-debug/1382811547/jsshell-mac64.zip
which I presume is a 64-bit debug non-deterministic threadsafe build.
Updated•12 years ago
|
Whiteboard: [jsbugmon:update,bisect] → [jsbugmon:update]
Comment 1•12 years ago
|
||
JSBugMon: Bisection requested, result:
autoBisect shows this is probably related to the following changeset:
The first bad revision is:
changeset: http://hg.mozilla.org/mozilla-central/rev/cee39f8dc049
parent: 152273:f4bc5478669b
user: Brian Hackett
date: Fri Oct 25 14:05:02 2013 -0600
summary: Bug 928562 - Always eagerly baseline compile inlined scripts during definite properties analysis, r=jandem.
This iteration took 426.038 seconds to run.
| Reporter | ||
Comment 2•12 years ago
|
||
Brian, is bug 928562 a likely regressor?
Blocks: 928562
Flags: needinfo?(bhackett1024)
| Assignee | ||
Comment 3•12 years ago
|
||
Assignee: general → bhackett1024
Attachment #823401 -
Flags: review?(jdemooij)
Flags: needinfo?(bhackett1024)
Updated•12 years ago
|
Attachment #823401 -
Flags: review?(jdemooij) → review+
| Assignee | ||
Comment 4•12 years ago
|
||
Comment 5•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
| Reporter | ||
Comment 6•12 years ago
|
||
Do you mind nominating for aurora landing as well please?
status-firefox25:
--- → unaffected
status-firefox26:
--- → unaffected
status-firefox27:
--- → affected
status-firefox28:
--- → fixed
status-firefox-esr17:
--- → unaffected
status-firefox-esr24:
--- → unaffected
Flags: needinfo?(bhackett1024)
Comment 7•12 years ago
|
||
| Assignee | ||
Comment 8•12 years ago
|
||
Comment on attachment 823401 [details] [diff] [review]
patch
[Approval Request Comment]
User impact if declined: assertion failure
Testing completed (on m-c, etc.): on m-i
Risk to taking this patch (and alternatives if risky): none
Attachment #823401 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Updated•12 years ago
|
Flags: needinfo?(bhackett1024)
Updated•12 years ago
|
Attachment #823401 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Reporter | ||
Updated•12 years ago
|
Keywords: checkin-needed
Comment 9•12 years ago
|
||
Keywords: checkin-needed
| Reporter | ||
Updated•12 years ago
|
Component: JavaScript Engine → JavaScript Engine: JIT
Comment 11•12 years ago
|
||
Flags: in-testsuite+
Whiteboard: [jsbugmon:update] → [jsbugmon:update][qa-]
You need to log in
before you can comment on or make changes to this bug.
Description
•