Bug 931496 - Check for compileability when eagerly baseline compiling inlined scripts. r=jandem, a=bajaj