js/src/jit-test/tests/ion/bug931496.js
@@ -1,0 +1,11 @@
+
+function g() {
+    yield
+}
+g()
+function f() {
+    g()
+}
+try {
+    new f
+} catch (e) {}
